--- a/arch/arm64/configs/cyanogenmod_lettuce-64_defconfig
+++ b/arch/arm64/configs/cyanogenmod_lettuce-64_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Inspiron-Beast_v2.2+"
+CONFIG_LOCALVERSION="-Inspiron-Beast_v2.3"
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
